@@ -79,6 +79,12 @@
             <artifactId>kotlin-stdlib</artifactId>
             <version>1.9.10</version>
         </dependency>
+        <dependency>
+            <groupId>com.github.kittinunf.fuel</groupId>
+            <artifactId>fuel</artifactId>
+            <version>2.3.1</version>
+        </dependency>
+
 
         <!-- Database -->
         <dependency>
@@ -100,8 +106,8 @@
         <!-- Testing -->
         <dependency>
             <groupId>io.mockk</groupId>
-            <artifactId>mockk</artifactId>
-            <version>1.13.4</version>
+            <artifactId>mockk-jvm</artifactId>
+            <version>1.13.8</version>
             <scope>test</scope>
         </dependency>
         <dependency>
@@ -182,6 +188,8 @@
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>3.1.2</version>
                 <configuration>
+                    <argLine>-XX:+EnableDynamicAgentLoading</argLine>
+
                     <includes>
                         <include>**/YassSuite.class</include>
                     </includes>
@@ -192,6 +200,9 @@
                 <groupId>org.jetbrains.kotlin</groupId>
                 <artifactId>kotlin-maven-plugin</artifactId>
                 <version>1.9.10</version>
+                <configuration>
+                    <jvmTarget>20</jvmTarget>
+                </configuration>
                 <executions>
                     <execution>
                         <id>compile</id>
